--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,16 @@
   <title>{% block title %}جملة - منصة الشراء بالجملة{% endblock %}</title>
     <!-- ضع الوسم هنا مع تعديل المسار حسب ملفك -->
     <link rel="icon" type="image/png" href="/static/images/logo.png">
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K7YH00K3CR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-K7YH00K3CR');
+</script>
   
   <!-- Bootstrap RTL -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" />
