--- a/app/templates/base1.html
+++ b/app/templates/base1.html
@@ -7,11 +7,26 @@
     <!-- ضع الوسم هنا مع تعديل المسار حسب ملفك -->
     <link rel="icon" type="image/png" href="/static/images/logo.png">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K7YH00K3CR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K7YH00K3CR');
+</script>
+
+
+
   <!-- Bootstrap RTL -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" />
   <!-- ملف CSS الخاص -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
   
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
   
 </head>
 <body>
@@ -61,5 +76,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
  
+
+  <script>   if (/Mobi|Android/i.test(navigator.userAgent)) {
+    document.body.classList.add('mobile-mode');
+  }
+</script>
+
 </body>
 </html>
